--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,7 @@
-/.ssh-and-bash
+.ssh-and-bash
+networks/data
+semantic_kernel/data
+semantic_kernel/semantic-kernel/data
+semantic_kernel/semantic-kernel/mdl
+semantic_kernel/semantic-kernel/semanticenv
+cnenv
